# llm-based-assistant

./: .env.example  .gitignore  README.md  docker-compose.yaml
ai-service/: Dockerfile  README.md  pyproject.toml
ai-service/app/: db.py  ingest.py  llm_provider.py  rag_engine.py  server.py  utils.py
ai-service/app/db/: init.sql
backend/: pom.xml
backend/src/main/java/com/domainai/backend/: BackendApplication.java
backend/src/main/java/com/domainai/backend/config/: CorsConfig.java  JwtAuthFilter.java  SecurityConfig.java
backend/src/main/java/com/domainai/backend/controller/: AgentController.java  AuthController.java  ChatController.java  DocumentController.java
backend/src/main/java/com/domainai/backend/dto/: AgentRequest.java  AgentResponse.java  AuthResponse.java  LoginRequest.java  MessageRequest.java  MessageResponse.java  RegisterRequest.java
backend/src/main/java/com/domainai/backend/models/: Agent.java  Chat.java  Document.java  Message.java  User.java
backend/src/main/java/com/domainai/backend/repository/: AgentRepository.java  ChatRepository.java  DocumentRepository.java  MessageRepository.java  UserRepository.java
backend/src/main/java/com/domainai/backend/service/: AgentService.java  AuthService.java  ChatService.java  CustomUserDetailsService.java  DocumentService.java  JwtService.java  UserService.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/domainai/backend/: BackendApplicationTests.java
evaluation-ui/: main.py  requirements.txt
frontend/: .env.production  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentCard.tsx  Hero.tsx  Navbar.tsx  PopularAgents.tsx  ProtectedRoute.tsx
frontend/src/pages/: AgentDetails.tsx  Chat.tsx  CreateAccount.tsx  CreateAgent.tsx  Home.tsx  MyAgents.tsx  SignIn.tsx  UploadDocuments.tsx
