[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = ""
authors = ["Sofiia Poklonova <sofapokl@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
fastapi = "^0.109.1"
sentence-transformers = "^2.2.2"
torch = "^2.1.0"
nltk = "^3.9.0"
PyMuPDF = "^1.22.5"
python-docx = "*"
mammoth = "^1.6.1"
psycopg = {extras = ["binary"], version = "^3.1.0"}
python-multipart = "^0.0.7"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
