[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = ""
authors = ["Sofiia Poklonova <sofapokl@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.109.1"
pydantic = ">=2.7.4,<3.0.0"
python-multipart = "^0.0.7"

# LangChain
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-ollama = "^0.3.0"

# Embeddings / Reranking
sentence-transformers = "2.2.2"
huggingface_hub = "0.14.1"
torch = "^2.1.0"

# Document processing
PyMuPDF = "^1.22.5"
python-docx = "*"
mammoth = "^1.6.1"

# Evaluation
ragas = "^0.2.0"
datasets = "^2.14.0"
pandas = "^2.0.0"
tokenizers = ">=0.13.0"
pyarrow = "14.0.2"
numpy = "1.26.4"
scikit-learn = "1.3.2"

# Database
psycopg = {extras = ["binary"], version = "^3.1.0"}

# NLP
nltk = "^3.9.0"
langdetect = "*"

# Other
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
